@@ -1,3 +1,9 @@
+2004-06-04  Vinay M R  <vinay.mandyakoppal@wipro.com>
+
+	* mailcheck.c (set_tooltip and set_atk_relation): Set
+	the accessible name to read out no of messages and remove
+	duplicate relation labelled by. Fixes bug #143695
+
 2004-03-17  Glynn Foster  <glynn.foster@sun.com>
 
 	* help/ja/*: Add ja docs since the author never got back
